# bnsmw

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
main/: Cargo.toml
main/src/: main.rs  scenario1.rs
test-util/container/: Dockerfile
vsomeiprs/: Cargo.toml  README.md  build.rs  vsomeip.json
vsomeiprs/src/: lib.rs  types.rs
vsomeiprs/tests/: field_notify.rs  request_response.rs
vsomeiprs/vsomeipc/: CMakeLists.txt  application.cpp  application.h  vsomeipc.cpp  vsomeipc.h
vsomeiprs/vsomeipc/cmake/: util.cmake
