[package]
name = "vsomeiprs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = [ "sync" ] }
log = { version = "0.4" }
bytes = { version = "1.7" }

[build-dependencies]
bindgen = { version = "0.70" }
cmake = { version = "0.1" }

[dev-dependencies]
fork = "0.2.0"
tokio = { version = "1.40.0", features = ["full"]}
